--- a/public/html/gameAI.html
+++ b/public/html/gameAI.html
@@ -12,6 +12,6 @@
     <canvas></canvas>
     <button id="dark-mode-toggle">Toggle Dark Mode</button>
     <p>Control the left player by using up and down arrow keys</p>
-    <script src="../js/gameScriptMulti.js"></script>
+    <script src="../js/gameScriptAI.js"></script>
   </body>
 </html>
