--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,6 @@
         </main>
       </form>
     </section>
-    <script src="./public/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
