--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 data-speed="20"
                 data-colors="#fef08a, #fde047, #eab308"
               ></pixel-canvas>
-              <button type="button">Play with Friend (Working on it)</button>
+              <button type="button">Play with Friend</button>
             </div>
           </a>
           <a href="./html/gameAI.html">
